# natsu

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: android-build.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-foundation/: 01-CONTEXT.md  01-DISCUSSION-LOG.md  01-PLAN-01.md  01-PLAN-02.md  01-PLAN-03.md  01-PLAN-04.md  01-PLAN-05.md  01-PLAN-06.md  01-RESEARCH.md  01-UI-SPEC.md  01-VALIDATION.md
.planning/phases/02-knowledge-advanced/: 02-CONTEXT.md  02-DISCUSSION-LOG.md  02-RESEARCH.md  02-UAT.md  02-UI-SPEC.md  PLAN-01-SUMMARY.md  PLAN-01-ai-provider.md  PLAN-02-SUMMARY.md  PLAN-INDEX.md  (+7 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
natsu/: package-lock.json  package.json  tailwind.config.js  vitest.config.ts
natsu/docs/: android-permissions.md
natsu/src/: App.tsx
natsu/src-tauri/: Cargo.toml  tauri.conf.json
natsu/tests/: setup.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
termsuite/: index.html  package-lock.json  package.json
termsuite/src/: App.tsx
termsuite/src-tauri/: Cargo.toml  tauri.conf.json
termsuite/src-tauri/src/: lib.rs  main.rs
termsuite/src-tauri/src/ai/: claude.rs  deepseek.rs  mod.rs  openai.rs  provider.rs
termsuite/src-tauri/src/commands/: ai.rs  graph.rs  mod.rs  notes.rs  relations.rs  search.rs  storage.rs  wiki.rs
termsuite/src-tauri/src/db/: schema.rs
(+172 files in other folders)
