[package]
name = "termsuite"
version = "0.1.0"
description = "AI-Powered Knowledge Terminal"
authors = ["TermSuite"]
edition = "2021"

[lib]
name = "termsuite_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.39", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
regex = "1"
lazy_static = "1.4"

# AI Provider dependencies
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
keyring = "3"
serde_repr = "0.1"
thiserror = "2"
